[package]
name = "apollo-spaceport"
version = "0.1.0-preview.2"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license-file = "./LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.3", features = ["derive"] }
flate2 = "1.0.22"
prost = "0.9.0"
prost-types = "0.9.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
sys-info = "0.9.1"
tonic = "0.6.2"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }

[target.'cfg(macos)'.dependencies]
uname = "0.1.1"

[target.'cfg(unix)'.dependencies]
uname = "0.1.1"

[build-dependencies]
tonic-build = "0.6.2"

[lib]
path = "src/lib.rs"

# spaceport binary
[[bin]]
name = "spaceport"
path = "src/spaceport.rs"
