[package]
name = "apollo-spaceport"
version = "0.1.0-preview.6"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license-file = "./LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.3", default-features = false, features = ["derive"] }
flate2 = "1.0.22"
prost = "0.9.0"
prost-types = "0.9.0"
reqwest = { version = "0.11.10", default_features = false, features = [
    "rustls-tls",
    "json",
] }
sys-info = "0.9.1"
tonic = "0.6.2"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }

[target.'cfg(macos)'.dependencies]
uname = "0.1.1"

[target.'cfg(unix)'.dependencies]
uname = "0.1.1"

[build-dependencies]
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
tonic-build = "0.6.2"

[lib]
path = "src/lib.rs"

# spaceport binary
[[bin]]
name = "spaceport"
path = "src/spaceport.rs"
