[package]
name = "custom-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
schemars = { version = "0.8", features = ["url"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tracing = "0.1"

# 👇 Local dependency to Router APIs
apollo-router = { path = "../apollo-router" }