[package]
name = "pg-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
futures = "0.3.31"
humansize = { version = "2.1.3", features = ["impl_style"] }
regex = "1.11.1"
serde_json.workspace = true
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "chrono",
] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
