[package]
name = "apollo-uplink"
version = "0.9.5"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
graphql_client = { version = "0.10.0" }
reqwest = { version = "0.11.10", default_features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
tokio = "1.18.2"
tokio-stream = "0.1.8"
tracing = "0.1.34"
url = "2.2.2"

[build-dependencies]
launchpad = { git = "https://github.com/apollographql/rover.git", rev = "c52bd32f1493e63844fd74e1a1d32f18e5c88394" }
reqwest = { version = "0.11.10", default_features = false, features = [
    "rustls-tls",
] }

[dev-dependencies]
tokio = { version = "1.18.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
