[package]
name = "apollo-uplink"
version = "0.12.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
graphql_client = { version = "0.11.0" }
reqwest = { version = "0.11.11", default_features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.139", features = ["derive", "rc"] }
tokio = "1.19.2"
tokio-stream = "0.1.9"
tracing = "=0.1.34"
url = "2.2.2"

[build-dependencies]
launchpad = { git = "https://github.com/apollographql/rover.git", rev = "d72ad078d9d845112bd33bd100a723a1fa0e72ff" }
reqwest = { version = "0.11.11", default_features = false, features = [
    "rustls-tls",
] }

[dev-dependencies]
tokio = { version = "1.19.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
