[package]
name = "apollo-uplink"
version = "1.0.0-alpha.2"
edition = "2021"
build = "build.rs"
license = "LicenseRef-ELv2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
graphql_client = { version = "0.11.0" }
reqwest = { version = "0.11.11", default_features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
tokio = "1.21.0"
tokio-stream = "0.1.9"
tracing = "=0.1.34"
url = "2.2.2"

[build-dependencies]
launchpad = { git = "https://github.com/apollographql/rover.git", rev = "d72ad078d9d845112bd33bd100a723a1fa0e72ff" }
reqwest = { version = "0.11.11", default_features = false, features = [
    "rustls-tls",
] }

[dev-dependencies]
tokio = { version = "1.21.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
