[workspace]

[package]
name = "xtask"
version = "1.5.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "LicenseRef-ELv2"
publish = false

[dependencies]
ansi_term = "0.12"
anyhow = "1"
base64 = "0.20"
camino = "1"
cargo_metadata = "0.15"
chrono = "0.4.23"
console = "0.15.5"
dialoguer = "0.10.3"
flate2 = "1"
graphql_client = { version = "0.12.0", features = ["reqwest"] }
git2 = "0.16.1"
itertools = "0.10.5"
libc = "0.2"
memorable-wordlist = "0.1.7"
octorust = "0.2.2"
once_cell = "1"
regex="1.7.1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "native-tls",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
serde_json_traversal = "0.2"
structopt = { version = "0.3", default-features = false }
tar = "0.4"
tempfile = "3"
tap = "1.0.1"
tinytemplate = "1.2.1"
tokio = "1.25.0"
which = "4"
zip = { version = "0.6", default-features = false }
walkdir = "2.3.2"
