[workspace]

[package]
name = "xtask"
version = "1.5.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "LicenseRef-ELv2"
publish = false

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4.4.4", features = ["derive"] }
cargo_metadata = "0.17"
# Only use the `clock` features of `chrono` to avoid the `time` dependency
# impacted by CVE-2020-26235.  https://github.com/chronotope/chrono/issues/602
# and https://github.com/chronotope/chrono/issues/1073 will explain more.
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
console = "0.15.7"
dialoguer = "0.10.4"
flate2 = "1"
graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
itertools = "0.11.0"
libc = "0.2"
memorable-wordlist = "0.1.7"
nu-ansi-term = "0.49"
once_cell = "1"
regex = "1.9.5"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tinytemplate = "1.2.1"
tokio = "1.32.0"
which = "4"
walkdir = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.21"
zip = { version = "0.6", default-features = false }

[dev-dependencies]
insta = { version = "1.32.0", features = ["json", "redactions", "yaml"] }
