[workspace]

[package]
name = "xtask"
version = "1.5.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "LicenseRef-ELv2"
publish = false

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4.5.1", features = ["derive"] }
cargo_metadata = "0.18.1"
# Only use the `clock` features of `chrono` to avoid the `time` dependency
# impacted by CVE-2020-26235.  https://github.com/chronotope/chrono/issues/602
# and https://github.com/chronotope/chrono/issues/1073 will explain more.
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
console = "0.15.8"
dialoguer = "0.11.0"
flate2 = "1"
graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
itertools = "0.12.1"
libc = "0.2"
memorable-wordlist = "0.1.7"
nu-ansi-term = "0.49"
once_cell = "1"
regex = "1.10.3"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tinytemplate = "1.2.1"
tokio = "1.36.0"
which = "6.0.1"
walkdir = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.21"
zip = { version = "0.6", default-features = false }

[dev-dependencies]
insta = { version = "1.35.1", features = ["json", "redactions", "yaml"] }
