[package]
name = "apollo-at-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-compiler = "=1.0.0-beta.3"
salsa = "0.16.1"
thiserror = "1.0"
url = "2"

[dev-dependencies]
env_logger = "0.7"
