[package]
name = "apollo-at-link"
version = "0.0.1"
authors = ["The Apollo GraphQL Contributors"]
edition = "2021"
description = "Apollo Federation @link usage"
documentation = "https://docs.rs/apollo-at-link"
repository = "https://github.com/apollographql/federation-next"
license = "Elastic-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-compiler = "=1.0.0-beta.4"
salsa = "0.16.1"
thiserror = "1.0"
url = "2"

[dev-dependencies]
env_logger = "0.7"
