[package]
name = "apollo-federation-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-compiler = "=1.0.0-beta.4"
indexmap = "2.0.2"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"
thiserror = "1.0.49"
