[package]
name = "apollo-federation"
version = "0.0.2"
authors = ["The Apollo GraphQL Contributors"]
edition = "2021"
description = "Apollo Federation"
documentation = "https://docs.rs/apollo-federation"
repository = "https://github.com/apollographql/federation-next"
license = "Elastic-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-compiler = "=1.0.0-beta.4"
salsa = "0.16.1"
indexmap = "2.0.0"
thiserror = "1.0"
url = "2"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"

[dev-dependencies]
env_logger = "0.7"
