[package]
name = "apollo-harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
clap = { version = "4.3.2", features = ["derive"] }
router-bridge = "0.5.6"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = { version = "1.0.107", features = [
    "preserve_order",
    "float_roundtrip",
] }
tokio = { version = "1.32.0", features = ["full"] }

[lib]
name = "apollo_harness"
path = "src/lib.rs"

[[bin]]
name = "rb_loader"
